--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body class="act">
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body class="act">
     <main>
-        <section class="ploader">
-
-            <div class="loader"></div>
-        </section>
-        <section>
-            <div class="title">
-                <div class="name toLeft"><h1>Flag Selection</h1></div>
-                <div class="modes toRight">
-                    <div class="dark_mode">
-                        <label class="switch">
-                        <input type="checkbox" class="inp">
-                        <span class="slider round"></span>
-                      </label></div>
-                    <div class="filter">
-                        <div class="back"></div>
-                        <input type="text" placeholder="Поиск по название">
-                    </div>
-                </div>
+      <section class="ploader">
+        <div class="loader"></div>
+      </section>
+      <section>
+        <div class="title">
+          <div class="name toLeft"><h1>Flag Selection</h1></div>
+          <div class="modes toRight">
+            <div class="dark_mode">
+              <label class="switch">
+                <input type="checkbox" class="inp" />
+                <span class="slider round"></span>
+              </label>
             </div>
-            <div class="cards">
-               
+            <div class="filter">
+              <div class="back"></div>
+              <input type="text" placeholder="Поиск по название" />
             </div>
-        </section>
+          </div>
+        </div>
+        <div class="cards"></div>
+      </section>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
+      integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./scripts/script.js"></script>
-</body>
+  </body>
 </html>
